<resources>
    <string name="app_name">Grocery Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="facebook_application_id" translatable="false">209203366340129</string>
    <string name="facebook_login_protocol_scheme" translatable="false">fb209203366340129</string>

    <array name="productTypes">
        <item>Grocery</item>
        <item>Medicine</item>
        <item>Fast Food</item>
        <item>Hardware</item>
        <item>Electronics</item>

    </array>
    <string name="title_activity_add_product">New Product</string>
    <string name="add_product">Add Product</string>
    <string name="product_price">Product Price</string>
    <string name="product_name">Product Name</string>
    <string name="image_name">Image Name</string>
    <string name="select_image">Select Image</string>
    <string name="todo">TODO</string>
    <string name="admin_mode">Switch Mode</string>
    <string name="search">Search</string>
    <string name="search_hint">Search Food Item</string>
    <string name="turns_on_admin_string_admin_mode">Turns On Admin @string/admin_mode</string>
    <string name="register">Register with us</string>
    <string name="login">Login</string>
    <string name="client_login">Client Login</string>
    <string name="checkbox">Remember me</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">ClientPassword</string>
    <string name="pref_default_display_name">Sourav Guchait</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Brown</item>
        <item>Green</item>
        <item>Black</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>-1</item>
        <item>0</item>
        <item>1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="username">Username</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="client_mode">My Cart</string>
    <string name="image">image</string>
    <string name="product">Product</string>

    <string name="title_activity_fullscreen">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="grocery_reminder">Grocery Reminder</string>
    <string name="grocery_android_string_fingerprint_icon_content_description">grocery @android:string/fingerprint_icon_content_description</string>
    <string name="API_KEY">AIzaSyBhYBestoNfTIHqbTWASaSly1_TplyGH4w</string>
    <string name="for_client_email_will_be_admin_email_and_password_will_be_available_from_admin">For client email will be admin email and password will be available from Admin</string>
</resources>
